--- a/Frontend/react/src/components/CSS/maincontent.css
+++ b/Frontend/react/src/components/CSS/maincontent.css
@@ -152,6 +152,7 @@
   align-self: stretch;
   background: none;
   border: none;
+  outline: none;
   font-family: 'Reem Kufi Fun', sans-serif;
 }
 
